...
                    android:textColor="?attr/colorOnSurfaceVariant" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_task"
        android:text="@string/add_task"
...
